# LCTSCap

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  RESEARCH_BRIEF.md  SPEC.md  environment.yml  pyproject.toml
configs/data/: capture24.yaml  harth.yaml
configs/eval/: eval_all.yaml
configs/model/: default.yaml
configs/train/: phase0.yaml  phase1.yaml  phase2.yaml  phase2_bosfix.yaml  phase2_flat.yaml  phase2_noalign.yaml  phase3.yaml  phase4.yaml
docs/: DOC_INDEX.md
docs/plans/: 2026-03-24-r007-review-plan-temp.md
figures/: cross_dataset_r1_data.json  gen_cross_dataset_r1_comparison.py  gen_task_hierarchy_overview.py  paper_plot_style.py
refine-logs/: EXPERIMENT_RESULTS.md  EXPERIMENT_TRACKER.md  LATEST_STATUS.json  LATEST_STATUS.md  REVIEW_SUMMARY.md
scripts/: check_leakage.py  download_aux_data.py  download_data.py  evaluate.py  evaluate_aux_alignment.py  generate_advisor_update_pptx.js  generate_annotations.py  generate_notion_figures.py  generate_paraphrases.py  generate_predictions.py  prepare_aux_alignment_data.py  preprocess.py  run_baseline.py  run_experiment.py  setup_env.sh  sync_project_docs.py  sync_refine_logs.py  train.py  watch_lctscap_tasks.py  watch_refine_logs_hook.py
src/lctscap/: __init__.py  config.py  inference.py
src/lctscap/baselines/: __init__.py  retrieval_baseline.py  template_captioner.py
tests/: test_auxiliary_alignment.py  test_evaluate_predictions.py  test_inference.py  test_losses.py  test_metrics.py  test_model_shapes.py  test_phase_framework.py  test_schema.py  test_smoke.py  test_splits.py
(+34 files in other folders)
